--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="img/icon.png" type="image/png" sizes="50x50">
+    <title>Ber nebo neber</title>
     <link href="css/index.css" rel="stylesheet">
 
     <script src="./js/index.js" defer></script>
